# xuexi-cv2

./: .gitignore  CMakeLists.txt  README.md  build.bat  mnn.7z
blue/: CMakeLists.txt  main.cpp  satrotblur.cpp  time_cal.cpp  yuvblur.cpp  yuvblur.h
demo/: CMakeLists.txt  caffe_dnn.cpp  face_detection.cpp  imshow.py  mnn_vb.cpp  nonlinear_svm.cpp  openvino_vb.cpp  robust_pca.cpp  simple_pca.cpp  simple_svm.cpp  stitch_pano.cpp  vb.cpp  yuview.cpp
mnn/: MNNConfig.cmake
openvino/inference_engine/: OpenVINOConfig.cmake
res/: 64x36.y  pano.ini
res/mnn/: vb_20210107.mnn
res/openvino/: vb_mod1.0_2019r2.xml
